kubernes-manifest/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
spec:
  restartPolicy: Never
  containers:
    - name: debug-container
      image: m3mbrillo/poll-admin:lasted
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      command: ["/bin/sh"]
      stdin: true
      tty: true
