kubernes-manifest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: moonly-poll-service
  labels:
    app: moonly-poll
spec:
  selector:
    app: moonly-poll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: moonly-api-port
    - protocol: TCP
      port: 90
      targetPort: 90
      name: moonly-admin-port
  type: ClusterIP
