kubernes-manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moonly-poll-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: moonly-poll-api.queen.vmware
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moonly-poll-service
                port:
                  number: 80
